--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,10 @@
 body {
   margin: 0;
   box-sizing: border-box;
-  /* display: flex; */
-  background-color: antiquewhite;
+  background-color: rgb(183, 183, 183);
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 #game-container {
@@ -15,19 +17,16 @@ body {
 #pieces-container {
   height: 100%;
   width: 10vw;
-  background-color: chartreuse;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
 }
 
 #pieces-highLight {
   height: 40%;
   width: 60%;
-  background-color: brown;
+  background-color: #2C363F;
   display: flex;
-  /* grid-template-columns: auto;
-  grid-template-rows: repeat(4, 25%); */
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -39,8 +38,7 @@ body {
   width: 3.5vw;
   box-sizing: border-box;
   font-size: 2vw;
-  /* border: 2px solid black; */
-  background-color: turquoise;
+  background-color: #20FC8F;
   border-radius: 1.2vw;
   display: flex;
   justify-content: center;
@@ -49,18 +47,19 @@ body {
 }
 
 #board-side {
-  height: 100vh;
+  height:100vh;
   width: 50vw;
-  background-color: aqua;
   display: grid;
   justify-content: center;
   align-items: center;
 }
 
 #menu-container {
-  width: 40vw;
-  height: 100vh;
-  background-color: blue;
+  width: 32vw;
+  height: 90vh;
+  background-color: #87A0B2;
+  margin: auto;
+  border-radius: 3.5vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -72,21 +71,30 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: blueviolet;
-  /* font-size: 2vw; */
+  color: antiquewhite;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#snake{
+  color: rgb(27, 251, 27);
+}
+
+#ladder{
+  color: #6A381F;
 }
 
 #board {
   height: 700px;
   width: 700px;
-  border: 0.2vw solid black;
+  border: 0.8vw solid black;
+  border-radius: 1vw;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
   box-sizing: border-box;
   margin: 0;
-  padding: 0px;
-  background: url(/IMGs/GameBaord-Background.jpg);
+  padding: 0;
+  background: url(/IMGs/GameBaord-Background2.jpg);
   background-position: fixed;
   background-repeat: no-repeat;
   background-size: cover;
@@ -97,14 +105,13 @@ body {
   text-align: center;
   justify-content: center;
   align-items: center;
-  border: 1px solid brown;
   box-sizing: border-box;
   font-size: 22px;
   aspect-ratio: 1;
+  text-shadow: 0px 0px 20px purple;
 }
 
 #diceContainer {
-  /* background-color: aqua; */
   height: 30%;
   width: 100%;
   display: flex;
@@ -117,7 +124,7 @@ body {
   height: 20%;
   width: auto;
   border: 0.4vw solid black;
-  border-radius: 3vw;
+  border-radius: 1.5vw;
   aspect-ratio: 1;
   display: flex;
   justify-content: center;
@@ -130,41 +137,41 @@ body {
 #diceScreen img {
   height: 99%;
   width: 99%;
-  border-radius: 3vw;
+  border-radius: 1.5vw;
   margin: auto;
   position: absolute;
-  /* display: none; */
 }
 
 #msg-container {
   height: 30vh;
-  width: 90%;
-  border: 0.2vw solid purple;
-  background-color: wheat;
+  width: 92%;
+  border-radius: 2vw;
+  background-color: #183059;
 }
 
 #msg-container h1 {
   text-align: center;
-  background-color: aqua;
-  margin: 0;
+  color:#FEB95F;
+  margin: 1vw 0 0 0;
 }
 
 #current-positions {
-  /* background-color: antiquewhite; */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  margin-left: 01vw;
+  margin-left: 1vw;
+  color: #20FC8F;
+  font-size: 0.85vw;
 }
 
 #msg {
   text-align: center;
   margin: 0.5vw;
+  color: #F21B3F;
 }
 
 #btns-container {
   margin-top: 3vw;
-  /* background-color: cadetblue; */
   width: 100%;
   height: 10vh;
   display: grid;
@@ -182,7 +189,11 @@ body {
 }
 
 .btn-style {
-  background-color: white;
+  background-color: #2C363F;
+  color: #20FC8F;
+  font-family: "Spicy Rice", serif;
+  font-weight: 400;
+  font-style: normal;
   width: 100%;
   height: 100%;
   font-size: 1.5vw;
@@ -192,11 +203,12 @@ body {
 }
 
 .btn-style:hover {
-  background-color: #434343;
-  color: white;
+  background-color: #20FC8F;
+  color: #2C363F;
   border-radius: 1.5vw;
 }
 
 .btn-style:active {
-  background-color: black;
+  background-color: #183059;
+  color: #F21B3F;
 }
